<resources>
    <string name="app_name">Papilio</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="alert_dialog_accept">Accept</string>
    <string name="papilio_slogan">Activities at your Fingertips</string>
    <string name="title_activity_initial_page">InitialPage</string>
    <string name="login_activity_greeting_message">Welcome Back!</string>
    <string name="login_activity_login_to_your_account">Log into your account</string>
    <string name="login_activity_login_no_have_account">Don\'t have an account?</string>
    <string name="signup_activity_greeting_message">Register</string>
    <string name="signup_activity_create_new_account">Create your new account</string>
    <string name="signup_activity_user_agreement">By signing up, you agree to</string>
    <string name="signup_activity_our_terms_of_use_and_privacy_notice">Our Terms of Use and Privacy Notice</string>
    <string name="individual_cost_range">Individual Cost Range</string>
    <string name="group_cost_range">Group Cost Range</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="date_range">Date Range</string>
</resources>