<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout_sign_up"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_activity_background"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:id="@+id/ll_main_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@id/ll_create_new_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_greeting_message"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_create_new_account"
                android:layout_width="523dp"
                android:layout_height="53dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_create_new_account" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <Button
                    android:id="@+id/continue_with_google_button"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableLeft="@drawable/google_icon"
                    android:elevation="5dp"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <View
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" or " />

                <View
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_first_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_first_name"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="First Name"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_last_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_last_name"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Last Name"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_email_address_input"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_email_address"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_email_address_input"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_user_agreement" />

                <TextView
                    android:id="@+id/tv_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signup_activity_our_terms_of_use_and_privacy_notice"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_button"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:elevation="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="100dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>